[gd_scene load_steps=19 format=3 uid="uid://bv61nk72x0j0c"]

[ext_resource type="Script" path="res://scripts/gui/popmenuPause.gd" id="1_4m16v"]
[ext_resource type="Texture2D" uid="uid://d2ruo3rtovaad" path="res://assets/sprites/ui/menu.png" id="1_jvx3o"]
[ext_resource type="Script" uid="uid://cprr85enxhxrm" path="res://scripts/gui/display_level.gd" id="2_677w4"]
[ext_resource type="FontFile" uid="uid://bbxfvrsyh1wu6" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_pyryq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jvx3o"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(709, 157, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pyryq"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(741, 159, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_677w4"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(645, 93, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4m16v"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(677, 95, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2b7nh"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(677, 95, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fuv5h"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(773, 125, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4sfxm"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(805, 127, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_yexvs"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(805, 127, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fhtdq"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(837, 93, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m7jfe"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(869, 95, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p3y7i"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(869, 95, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gkd7h"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(773, 93, 22, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a4l31"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(805, 95, 22, 22)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2y24b"]
texture = ExtResource("1_jvx3o")
region_rect = Rect2(805, 95, 22, 22)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="popmenu" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4m16v")

[node name="baseMenu" type="HBoxContainer" parent="popmenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="popmenu/baseMenu"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="baseMenuScreen" type="MarginContainer" parent="popmenu/baseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="NinePatchRect" type="NinePatchRect" parent="popmenu/baseMenu/VBoxContainer/baseMenuScreen"]
custom_minimum_size = Vector2(370, 160)
layout_mode = 2
texture = ExtResource("1_jvx3o")
region_rect = Rect2(741, 31, 22, 22)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="popmenu/baseMenu/VBoxContainer/baseMenuScreen/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="buttonContainer" type="VBoxContainer" parent="popmenu/baseMenu/VBoxContainer/baseMenuScreen/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="topButtonContainer" type="HBoxContainer" parent="popmenu/baseMenu/VBoxContainer/baseMenuScreen/NinePatchRect/MarginContainer/buttonContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="helpButton2" type="Button" parent="popmenu/baseMenu/VBoxContainer/baseMenuScreen/NinePatchRect/MarginContainer/buttonContainer/topButtonContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_jvx3o")
theme_override_styles/pressed = SubResource("StyleBoxTexture_pyryq")
theme_override_styles/hover = SubResource("StyleBoxTexture_pyryq")

[node name="settingsButton" type="Button" parent="popmenu/baseMenu/VBoxContainer/baseMenuScreen/NinePatchRect/MarginContainer/buttonContainer/topButtonContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_677w4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4m16v")
theme_override_styles/hover = SubResource("StyleBoxTexture_2b7nh")

[node name="lowerButtonContainer2" type="HBoxContainer" parent="popmenu/baseMenu/VBoxContainer/baseMenuScreen/NinePatchRect/MarginContainer/buttonContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="quitGameButton" type="Button" parent="popmenu/baseMenu/VBoxContainer/baseMenuScreen/NinePatchRect/MarginContainer/buttonContainer/lowerButtonContainer2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_fuv5h")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4sfxm")
theme_override_styles/hover = SubResource("StyleBoxTexture_yexvs")

[node name="exitButton" type="Button" parent="popmenu/baseMenu/VBoxContainer/baseMenuScreen/NinePatchRect/MarginContainer/buttonContainer/lowerButtonContainer2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_fhtdq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_m7jfe")
theme_override_styles/hover = SubResource("StyleBoxTexture_p3y7i")

[node name="displayLevel" type="VBoxContainer" parent="popmenu/baseMenu/VBoxContainer/baseMenuScreen/NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("2_677w4")

[node name="levelDisplay" type="Label" parent="popmenu/baseMenu/VBoxContainer/baseMenuScreen/NinePatchRect/MarginContainer/displayLevel"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_outline_color = Color(0.6666667, 0.4745098, 0.34901962, 1)
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("2_pyryq")
theme_override_font_sizes/font_size = 21
text = "Level:"

[node name="pauseIconButton" type="HBoxContainer" parent="popmenu"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="popmenu/pauseIconButton"]
layout_mode = 2

[node name="separator" type="Control" parent="popmenu/pauseIconButton/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="pauseButton" type="Button" parent="popmenu/pauseIconButton/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_gkd7h")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a4l31")
theme_override_styles/hover = SubResource("StyleBoxTexture_2y24b")

[node name="separator" type="Control" parent="popmenu/pauseIconButton"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[connection signal="pressed" from="popmenu/baseMenu/VBoxContainer/baseMenuScreen/NinePatchRect/MarginContainer/buttonContainer/lowerButtonContainer2/exitButton" to="popmenu" method="_on_exit_button_pressed"]
[connection signal="pressed" from="popmenu/pauseIconButton/VBoxContainer/pauseButton" to="popmenu" method="_on_pause_button_pressed"]
